--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Developer Profile</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    h2 {
+      color: #555;
+    }
+    p {
+      color: #777;
+    }
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hi there 👋</h1>
+  <p>...and Thank you for taking the time to meet me!</p>
+
+  <h2>About me</h2>
+  <p>
+    I am an experienced Flutter developer with a background in developing mobile applications for iOS in Swift (4 years exp.).
+    I started working with Flutter in November 2019. My qualities include: diligence, a desire to work efficiently, fast learning ability,
+    stress resistance, conflict-free, ability to work in a time-deficient mode, organization, and responsibility.
+    I can read the documentation fluently in English, and I also speak English (B1, Intermediate).
+    For self-organization and control of work on all projects, I use boards in Trello, Apple Calendar for time tracking,
+    and GitHub for version control.
+  </p>
+
+  <h2>My experience</h2>
+  
+  <h3>Operator18</h3>
+  <p>
+    My best experience with Flutter is a <a href="https://github.com/kharitonovAL/o18" target="_blank">CRM system for management companies</a>.
+    The system is structured as follows:
+    <ol>
+      <li>Two client-server projects: one for the management company and its employees, the other for the owners of staff.
+          Both projects are designed and developed for three platforms (iOS, Android, Web).</li>
+      <li>One server project on Dart to implement a Telegram bot for customers (more information about the bot can be found
+          in my article on <a href="https://medium.com/@Kharitonov_al" target="_blank">Medium</a>).</li>
+    </ol>
+    You can remotely check how the system works on its <a href="https://v2.operator18.ru" target="_blank">demo site</a>.
+    Use login operator@mail.ru and password operator. The CRM system has allowed the management company to establish some work processes,
+    in particular: to increase the speed of application processing, to improve control over the execution of applications,
+    to speed up and automate the Operator's tasks, and to ensure the possibility of quick communication with residents through push notifications.
+    In this project, the backend was deployed on a VDS with MongoDB utilized under ParseServer.
+    For push notifications, Firebase Cloud Messaging was employed. The project was developed using MobX for the mobile apps and Bloc for the web app.
+  </p>
+
+  <h3>MySciHub</h3>
+  <p>
+    My other experience is adding functionality to the existing MySciHub application.
+    In the course of my work, I had to study the code written by another developer, dive into its work, and embed new functionality.
+    In particular, it was necessary to be able to add new events through the mobile application. At the moment, the work has been handed over to the customer.
+  </p>
+
+  <h3>Workee</h3>
+  <p>
+    Introducing the <a href="https://play.google.com/store/apps/details?id=com.narushev.workee" target="_blank">Workee app</a> - an exceptional experience!
+    This app, which I developed for a client, is a remarkable and intricate project. To ensure efficient state management, I opted for the Mobx library.
+    The backend relies on Firebase, encompassing Authentication, Firestore, Cloud Storage, and Cloud Messaging. Workee allows users to effortlessly create tasks
+    while enabling others to conveniently complete them. Moreover, the app boasts a comprehensive rating and recommendation system.
+    To ensure a safe environment, we have also implemented a robust censor system, effectively preventing any harmful user behavior.
+  </p>
+
+  <h2>Skills</h2>
+  <p>
+    VS Code, Android Studio, Xcode, Dart, Swift, Git, Firebase, ParseServer, Null safety, AppStoreConnect, Google Play Market.
+  </p>
+
+  <h2>Articles</h2>
+  <ul>
+    <li><a href="https://medium.com/@Kharitonov_al/create-telegram-bot-that-listen-to-channel-with-dart-language" target="_blank">Create Telegram-bot that listens to channel with Dart language</a></li>
+    <li><a href="https://medium.com/@Kharitonov_al/the-way-im-using-bloc-in-flutter-app-5c072d854e89" target="_blank">The way I'm using Bloc in Flutter</a></li>
+    <li><a href="https://medium.com/@Kharitonov_al/telegram-bot-with-dart-and-docker-1652d6017364" target="_blank">Telegram bot with Dart and Docker</a></li>
+  </ul>
+
+  <h2>Contacts</h2>
+  <p>Email: <a href="mailto:2501.mailbox@gmail.com">2501.mailbox@gmail.com</a></p>
+  <p>Telegram: <a href="https://t.me/Kharitonov_AL" target="_blank">@Kharitonov_AL</a></p>
+  <p>Twitter: <a href="https://twitter.com/al_mbx" target="_blank">@al_mbx</a></p>
+</body>
+</html>
