--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
       margin: 20px;
+      background-color: #f8f9fa;
+      color: #343a40;
     }
     h1 {
-      color: #333;
+      color: #007BFF;
     }
     h2 {
-      color: #555;
+      color: #6610f2;
+    }
+    h3 {
+      color: #6f42c1;
     }
     p {
-      color: #777;
+      color: #495057;
     }
     a {
       color: #007BFF;
@@ -26,11 +31,14 @@
     a:hover {
       text-decoration: underline;
     }
+    ol, ul {
+      padding-left: 20px;
+    }
   </style>
 </head>
 <body>
   <h1>Hi there 👋</h1>
-  <p>...and Thank you for taking the time to meet me!</p>
+  <p>...and Thank you for taking the time to meet me! 🚀</p>
 
   <h2>About me</h2>
   <p>
@@ -80,7 +88,7 @@
 
   <h2>Skills</h2>
   <p>
-    VS Code, Android Studio, Xcode, Dart, Swift, Git, Firebase, ParseServer, Null safety, AppStoreConnect, Google Play Market.
+    VS Code, Android Studio, Xcode, Dart, Swift, Git, Firebase, ParseServer, Null safety, AppStoreConnect, Google Play Market. 🛠️
   </p>
 
   <h2>Articles</h2>
