--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
       margin: 20px;
-      background-color: #f8f9fa;
-      color: #343a40;
+      background-color: #000; /* Set background color to black */
+      color: #fff; /* Set text color to white */
     }
     h1 {
       color: #007BFF;
