--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <li><a href="https://medium.com/@Kharitonov_al/create-telegram-bot-that-listen-to-channel-with-dart-language" target="_blank">Create Telegram-bot that listens to channel with Dart language</a></li>
     <li><a href="https://medium.com/@Kharitonov_al/the-way-im-using-bloc-in-flutter-app-5c072d854e89" target="_blank">The way I'm using Bloc in Flutter</a></li>
     <li><a href="https://medium.com/@Kharitonov_al/telegram-bot-with-dart-and-docker-1652d6017364" target="_blank">Telegram bot with Dart and Docker</a></li>
+    <li><a href="https://medium.com/@Kharitonov_al/new-stripe-payments-in-flutter-ae9f31a28438" target="_blank">New Stripe payments in Flutter</a></li>
   </ul>
 
   <h2>Contacts</h2>
