--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <h2>Contacts</h2>
   <p>Email: <a href="mailto:2501.mailbox@gmail.com">2501.mailbox@gmail.com</a></p>
-  <p>Telegram: <a href="https://t.me/Kharitonov_AL" target="_blank">@Kharitonov_AL</a></p>
+  <p>Telegram: <a href="https://t.me/hrtval" target="_blank">@hrtval</a></p>
   <p>Twitter: <a href="https://twitter.com/al_mbx" target="_blank">@al_mbx</a></p>
 </body>
 </html>
